--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">RoseBakeryApp</string>
+    <string name="top_bar">Rose Bakery</string>
     <string name="new_shopping_list">Shop a Recipe</string>
     <string name="create_shopping_list">Create a Recipe</string>
 </resources>
